--- a/.github/workflows/sync-release-version.yml
+++ b/.github/workflows/sync-release-version.yml
@@ -11,11 +11,14 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Sync release version
+      - name: Run release-tagger
+        uses: tj-actions/release-tagger@v2
+      - name: Sync release version.
         uses: tj-actions/sync-release-version@v13
         id: sync-release-version
         with:
           pattern: '${{ github.repository }}@'
+          only_major: true
           paths: |
             README.md
       - name: Generate CHANGELOG
