--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,8 +4,14 @@ repos:
     hooks:
       - id: forbid-binary
       - id: shellcheck
+
+  - repo: https://github.com/cisagov/pre-commit-shfmt
+    rev: v0.0.2
+    hooks:
       - id: shfmt
-        args: ["-w"]
+        args:
+          - -i
+          - '2'
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
